--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <title>Title</title>
+    <title>JavaScript homework 02</title>
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -31,5 +31,6 @@
     <script type="module" src="./js/task-1.js"></script>
     <script type="module" src="./js/task-2.js"></script>
     <script type="module" src="./js/task-3.js"></script>
+    <script type="module" src="./js/task-4.js"></script>
   </body>
 </html>
